fixed img not fitting the height of the element

--- a/style/style.css
+++ b/style/style.css
@@ -25,8 +25,8 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
+  /* display: block; */
+  /* max-width: 100%; */
 }
 input, button, textarea, select {
   font: inherit;
@@ -94,17 +94,17 @@ body{
 */
 .card_image{
   order:2;
-  max-width:100%;
   background: white;
   position: relative;
-  border-radius: 0.625rem;
+  border-radius: 0 0.675rem 0.675rem 0;
 }
-.card_image img{
-  object-fit: cover;
+.image img{
+  /* object-fit: cover; */
   width: 100%;
   height: 100%;
+  border-radius: 0 0.675rem 0.675rem 0;
 }
-picture::before{
+.image::before{
   content: '';
   position: absolute;
   top: 0;
@@ -131,7 +131,7 @@ picture::before{
   font-weight: 700;
   line-height: 2.8125rem;
   margin-bottom: 2rem;
-  width:85%;
+  width:90%;
 }
 .purple{
   color:rgb(133, 41, 133);
@@ -168,7 +168,7 @@ picture::before{
   Media Queries
   =======
 */
-@media(max-width:850px){
+@media(max-width:955px){
   .card{
     display:block;
     max-width:35rem;
